[tool.poetry]
packages = [
  { include = "brain_games" },
]
name = "python-project-lvl1"
version = "0.1.0"
description = ""
authors = ["Dimasik <dimasuckov315@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.poetry.scripts]
brain-games = "brain_games.scripts.brain_games:main"
